# longship

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
core/models/: __init__.py  additional_geo_location_dto.py  authorization_assertion_dto_auth_scenario_type.py  authorization_charger_context_dto.py  authorization_result_dto.py  business_details_dto.py  cdr_dto.py  cdr_dto_approval_status.py  cdr_dto_financial_type.py  cdr_started_by_info_dto.py  cdr_started_by_info_dto_authorization_state.py  cdr_started_by_token_dto_auth_method.py  cdr_started_by_token_dto_token_type.py  change_availability_request_type.py  charge_point_authorize_get_dto_authorization_request_type.py  chargepoint_connector_dto.py  chargepoint_connector_dto_format.py  chargepoint_connector_dto_operational_status.py  chargepoint_connector_dto_power_type.py  chargepoint_connector_dto_standard.py  chargepoint_dto_connectivity_status.py  chargepoint_put_dto.py  chargepoint_status_dto_connectivity_status.py  charging_meter_value_dto_measurand.py  charging_meter_value_dto_unit.py  charging_period_dto.py  charging_profile_charging_profile_purpose.py  charging_profile_recurrency_kind.py  clear_cache_request.py  connector_dto.py  connector_dto_power_type.py  connector_dto_standard.py  cs_charging_profiles.py  display_text_dto.py  (+82 more)
fixtures/: CdrCreated.json  ChargePointBooted.json  ConnectivityStatusChanged.json  LocationCreated.json  LocationUpdated.json  OperationalStatusChanged.json  SessionStart.json  SessionStop.json  SessionUpdate.json  longship_14-03-24.json  longship_23-08-23.json  longship_24-06-23.json
longship/: chargepoint.py  client.py  errors.py  messages.py  session.py  token.py  types.py
longship_api_client/: __init__.py
tests/: test_chargepoint.py  test_client.py  test_session.py
(+280 files in other folders)
