[tool.poetry]
name = "longship"
version = "2024.10.22"
description = "A client library for accessing Longship API"

authors = ["Wojtek Siudzinski <admin@suda.pl>", "Arnaud Kayonga <a.kayonga@meshpower.co.rw>"]

readme = "README.md"
packages = [
    {include = "core"},
    {include = "longship"},
]
include = ["CHANGELOG.md", "core/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.15.4,<0.25.0"
attrs = ">=21.3.0"
python-dateutil = "^2.8.0"

[tool.poetry.group.dev.dependencies]
openapi-python-client = "^0.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ['py38', 'py39', 'py310', 'py311', 'py312']
exclude = '''
(
  /(
    | \.git
    | \.venv
    | \.mypy_cache
  )/
)
'''

[tool.isort]
line_length = 120
profile = "black"
